# federicos-plots

./: README.md  pyproject.toml
data/: demo.csv
docs/: conf.py  index.md  plots.md
docs/jupyter_execute/: plots.ipynb
src/federicos_plots/: demo.py
