[project]
name = "federicos-plots"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "fnsangiul", email = "fsangiul@gmail.com"},
]
dependencies = ["numpy>=2.3.2", "pandas>=2.3.1", "matplotlib>=3.10.5"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0"}

[project.optional-dependencies]
docs = [
    "sphinx>=8.2.3",
    "furo>=2025.7.19",
    "myst-nb>=1.3.0",
    "rich>=14.1.0",
    "sphinx-design>=0.6.1",
    "sphinx-autobuild>=2024.10.3",
]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.7",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
lint.composite = [
    "ruff check",
    "black . --diff",
]
format.composite = [
    "black .",
    "ruff check --fix",
]
test = "pytest"
docs = "sphinx-autobuild ./docs ./docs/_build"

[tool.black]
target-version = ["py311", "py312", "py313"]

[tool.ruff]
target-version = "py311"
include = ["src/federicos_plots/**/*.py", "tests/**/*.py", "pyproject.toml"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # annotations
    "ANN",
    # perf
    "PERF",
    # numpy
    "NPY",
    ## ----------
    # pydocstyle
    # undocumented public objects
    # "D100", "D101", "D102", "D103", "D104", "D106", "D107",
    # indentation
    "D207", "D208",
    # whitespace
    "D210", "D211",
    # emptiness
    "D419",
    # no pdb
    "T100",
]
ignore = [
    "ANN101", "ANN102", "ANN401", "ANN204",
    # explicit strict arg for zip
    "B905",
    # builtin type annotations
    "UP006", "UP035",
    # | for Union types (only supported >=3.10
    "UP007", "UP038",
    # docstrings for __init__
    "D107",
]

fixable = ["ALL"]